--- a/produtos.html
+++ b/produtos.html
@@ -43,5 +43,9 @@
       </li>
     </ul>
   </main>
+  <footer>
+    <img src="logo-branco.png" alt="" srcset="">
+    <p class="Copyright"> &copy; Copyright Barbearia Alura - 2023</p>
+  </footer>
 </body>
 </html>
