--- a/contato.html
+++ b/contato.html
@@ -25,15 +25,39 @@
   <main>
     <form action="">
       <label for="nomesobrenome">Nome e sobrenome</label>
-      <input type="text" id="nomesobrenome">
+      <input type="text" id="nomesobrenome" class="input-padrao">
 
       <label for="email">Email</label>
-      <input type="text" id="email">
+      <input type="text" id="email" class="input-padrao">
 
       <label for="telefone">Telefone</label>
-      <input type="text" id="telefone">
+      <input type="text" id="telefone" class="input-padrao">
 
+      <label for="mensagem">Mensagem</label>
+      <textarea name="" id="mensagem" class="input-padrao" cols="70" rows="10"></textarea>
+
+      <div>
+          <p >Como prefere o nosso contato?</p>
+          <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
+
+
+          <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+
+
+          <label for="radio-whatsapp"><input type="radio" name="contato"value="whatsapp" id="radio-whatsapp">WhatsApp</label>
+
+    </div>
+    <div>
+    <p>Qual o horário prefere ser atendido</p>
+    <select name="" id="">
+      <option value="">Manhâ</option>
+      <option value="">Tarde</option>
+      <option value="">Noite</option>
+    </select>
+    </div>
+    <label class="checkbox"><input type="checkbox" name="" id=""> Gostaria de receber nossas novidades por email?</label>
       <input type="submit" value="Enviar formulário">
+
 
     </form>
   </main>
