--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -49,6 +52,11 @@
         </p>
 
       </section>
+      <section class="mapa">
+        <h3 class="titulo-principal">Nosso Estabelecimento</h3>
+        <p>Nosso estabelecimento está localizado no coração da cidade</p>
+      </section>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29254.085676786723!2d-46.662632493145125!3d-23.577036175722817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1sen!2sbr!4v1706222960988!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0"></iframe>
 
       <section class="beneficios">
         <h3 class="titulo-principal">Benefícios</h3>
@@ -59,6 +67,8 @@
           <li class="itens">Profissionais Qualificados</li>
         </ul>
         <img src="beneficios.jpg" class="imagembeneficios" />
+        <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=K1Qlyles-JEFoURc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       </section>
     </main>
     <footer>
