--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3 class="titulo-principal">Nosso Estabelecimento</h3>
         <p>Nosso estabelecimento está localizado no coração da cidade</p>
       </section>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29254.085676786723!2d-46.662632493145125!3d-23.577036175722817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1sen!2sbr!4v1706222960988!5m2!1sen!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0"></iframe>
+      <div class="mapa-conteudo"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29254.085676786723!2d-46.662632493145125!3d-23.577036175722817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1sen!2sbr!4v1706222960988!5m2!1sen!2sbr" width="100%" height="300"  " frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       <section class="beneficios">
         <h3 class="titulo-principal">Benefícios</h3>
       <div class="conteudo-beneficios">
@@ -76,7 +76,7 @@
     </main>
     <footer>
       <img src="logo-branco.png" alt="" srcset="" />
-      <p class="Copyright">&copy; Copyright Barbearia Alura - 2023</p>
+      <p class="Copyright">&copy; Copyright Barbearia Alura - 2024</p>
     </footer>
   </body>
 </html>
